--- a/css/style.css
+++ b/css/style.css
@@ -1408,3 +1408,8 @@ main {
 .hidden {
   display: none;
 }
+
+.img-upload__field-wrapper__error {
+  color: #e90000;
+  background-color: #f5f0f0;
+}
